--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,4 @@
-
-MONGO_URL = mongodb+srv://sadikhali_pv:Yn7ggXCnqq4Ps4XL@cluster0.5djfgev.mongodb.net/?retryWrites=true&w=majority&dbName=slotSwapper
+MONGO_URL =
 PORT = 3002
-JWT_KEY=dskjfdjjsdkghdjsdfdjfjdjbgfhgfhjgjmghkhjk
+JWT_KEY=
 ORIGIN = http://localhost:5173
